Fixed directory layout calls

--- a/Prelude/Slides/Prelude_Slides.tex
+++ b/Prelude/Slides/Prelude_Slides.tex
@@ -72,7 +72,7 @@
 %}}}
 
 %{{{ Setup References
-\usepackage[backend=biber, style=authoryear]{biblatex}
+\usepackage[backend=bibtex, style=authoryear]{biblatex}
 \addbibresource{../../References/References.bib}
 \renewcommand*{\nameyeardelim}{\addcomma\addspace}
 %}}}
@@ -170,10 +170,10 @@
 
 \begin{frame}
 \frametitle{Transition}
-\TwoFig{../../Graphics/Bif_3D.png}
+\TwoFig{../../Graphics/Bif_Graphs/Bif_3D.png}
 	{Two codimension 1 fold bifurcations, with the parameter $b$ dictating the size of the hysteresis, until the bifurcations merge into a cusp \parencite{weymiens_bifurcation_2014}.}
 	{fig:Bif_3D}
-	{../../Graphics/3_transitions_single_simple.png}
+	{../../Graphics/Bif_Graphs/3_transitions_single_simple.png}
 	{Codimension 3 parameter space with the black line indicating the fold bifurcation. The parameter $b$ dictates the type of transition, including the size of the hysteresis in the sharp transition \parencite{weymiens_bifurcation_2014}.}
 	{fig:Bif_types}
 \end{frame}
@@ -204,7 +204,7 @@ A few examples:
 \begin{itemize}
 	\item Charge exchange friction
 	\begin{itemize}
-		\item There is a loss of ion momentum due to the charge exchange rate that dominates over ionization impact \parencite{toda_condensed_neutrals_1997}.
+		\item There is a loss of ion momentum due to the charge exchange rate that dominates over ionization impact \parencite{toda_theoretical_1997}.
 	\end{itemize}
 	\item Ion orbit loss
 	\begin{itemize}
@@ -212,7 +212,7 @@ A few examples:
 	\end{itemize}
 	\item Reynolds stress
 	\begin{itemize}
-		\item Turbulent fluctuations cause perturbations to the flow. For coherent and spatially-varying fluctuations, a nonzero Reynolds stress accelerates poloidal flow \parencite{diamond_poloidal_1991}.
+		\item Turbulent fluctuations cause perturbations to the flow. For coherent and spatially-varying fluctuations, a nonzero Reynolds stress accelerates poloidal flow \parencite{diamond_theory_1991}.
 	\end{itemize}
 \item Poloidal flux transients, Maxwell stress, magnetic perturbations, etc \parencite{staps_backstepping_2017}.
 \end{itemize}
