Hard-coded date for original submission

--- a/Thesis/titlepage.tex
+++ b/Thesis/titlepage.tex
@@ -52,7 +52,7 @@ Committee Members:\\\vspace*{2mm}
 %\docdate \\
 \large
 Eindhoven, NL\\
-\today\\
+16 May 2018\\
 
 % Put the Paragraph Indent back to its original value
 \setlength{\parindent}{\backupparindent}
