--- a/Thesis/Dynamical_Model/Dynamical_Model.tex
+++ b/Thesis/Dynamical_Model/Dynamical_Model.tex
@@ -154,7 +154,7 @@ The terms $I_\phi$ and $I_\theta$ represent large poloidal and toroidal integral
 
 However, in an effort to circumvent the direct calculations of flow velocities, a different form is introduced by Stringer \cite{stringer_explanation_1993}.
 \begin{align} % Stringer Bulk Viscosity
-	\Gamma_i^{\pi\parallel} \,=\, \,n_e\,&D_{\pi\parallel}
+	\Gamma_i^{\pi\parallel} \,=\, n \, &D_{\pi\parallel}
 		\left(\frac{n^\prime}{n} + \frac{Z}{\rho_{\theta i}}\right) \,
 		\text{Im}\left[X\left(Z \,+\, i\,\frac{\nu_{ii}}{\omega_t}\right)\right]
 		\label{eq:stringer_Gamma_bulk} \\
@@ -278,7 +278,7 @@ The penetration depth is $d$, with the rate of drop off determined by $k$.
 
 Combining the neutrals density and charge exchange rate into a nonambipolar flux gives
 \begin{align} % Charge exchange current
-	e\,\Gamma_e^\text{cx} \,&=\,
+	e\,\Gamma_i^\text{cx} \,&=\,
 		-\frac{m_i \,n_0 \langle\sigma_\text{cx} v\rangle \, n\,T}{B_\theta^2}
 		\, \left[\frac{B_\theta^2}{\epsilon^2 B_\phi^2} + 2\right] \,
 		\left(\frac{n^\prime}{n} \,+\, \frac{\alpha_\text{cx}\,T^\prime}
