40000 plot added at end

--- a/Presentation/Slides.tex
+++ b/Presentation/Slides.tex
@@ -778,6 +778,7 @@ Boundary conditions can dictate overall behavior
 	\item $J^{\pi\parallel}$ consistently has the largest effect; $J^\text{an}$ comes in second.
 	\item $J^\text{ol}$ becomes insignificant in the presence of a nonzero field, therefore cannot be dominant.
 \end{itemize}
+\hrule
 \begin{itemize}
 	\item $J^\text{cx}$ has more chosen (rather than) parameters; more analytic model should be used.
 	\begin{itemize}
@@ -846,6 +847,19 @@ Boundary conditions can dictate overall behavior
 \centering
 Are the oscillations ELMs? \\
 \Huge No
+\end{frame}
+
+\begin{frame} % Super long-term state
+
+\begin{figure}[h]
+\begin{minipage}{0.69\linewidth}
+	\includegraphics[width=\textwidth]{../Graphics/Model_Graphs/state_G1e20_extended_t40000.png}
+\end{minipage}
+\begin{minipage}{0.29\linewidth}
+	\caption{After 20 ms, oscillations still dominate, with the domain of oscillation bigger.}
+\end{minipage}
+\end{figure}
+
 \end{frame}
 
 \end{document}
