Moved ELMs frame to end

--- a/Presentation/Slides.tex
+++ b/Presentation/Slides.tex
@@ -845,12 +845,6 @@ Boundary conditions can dictate overall behavior
 \end{align}
 \end{frame}
 
-\begin{frame}
-\centering
-Are the oscillations ELMs? \\
-\Huge No
-\end{frame}
-
 \begin{frame} % Super long-term state
 
 \begin{figure}[h]
@@ -862,6 +856,12 @@ Are the oscillations ELMs? \\
 \end{minipage}
 \end{figure}
 
+\end{frame}
+
+\begin{frame} % ELMs? NO
+\centering
+Are the oscillations ELMs? \\
+\Huge No
 \end{frame}
 
 \end{document}
